# rasterizer

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  main.c
include/: rasterizer.h
src/: color.c  color_buffer.c  color_buffer.h  framebuffer.c  index_array.c  rasterizer.c  renderer_state.c  texture.c  vector_math.c  vertex_array.c
